--- a/result/2022-01-01.md
+++ b/result/2022-01-01.md
@@ -1,5 +1,5 @@
 1. [跨年](https://s.weibo.com//weibo?q=%E8%B7%A8%E5%B9%B4&Refer=top) 2642984
-2. [新年快乐](https://s.weibo.com//weibo?q=%E6%96%B0%E5%B9%B4%E5%BF%AB%E4%B9%90&Refer=top) 1606224
+2. [新年快乐](https://s.weibo.com//weibo?q=%E6%96%B0%E5%B9%B4%E5%BF%AB%E4%B9%90&Refer=top) 1613819
 3. [大家忙了一整年付出了奉献了也收获了](https://s.weibo.com//weibo?q=%23%E5%A4%A7%E5%AE%B6%E5%BF%99%E4%BA%86%E4%B8%80%E6%95%B4%E5%B9%B4%E4%BB%98%E5%87%BA%E4%BA%86%E5%A5%89%E7%8C%AE%E4%BA%86%E4%B9%9F%E6%94%B6%E8%8E%B7%E4%BA%86%23&Refer=top) 1541184
 4. [新年贺词里的暖心话](https://s.weibo.com//weibo?q=%23%E6%96%B0%E5%B9%B4%E8%B4%BA%E8%AF%8D%E9%87%8C%E7%9A%84%E6%9A%96%E5%BF%83%E8%AF%9D%23&Refer=top) 1502888
 5. [张光北朗诵谁是最可爱的人](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E5%85%89%E5%8C%97%E6%9C%97%E8%AF%B5%E8%B0%81%E6%98%AF%E6%9C%80%E5%8F%AF%E7%88%B1%E7%9A%84%E4%BA%BA%23&Refer=top) 1491824
@@ -29,22 +29,22 @@
 29. [新年第一缕阳光](https://s.weibo.com//weibo?q=%23%E6%96%B0%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%BC%95%E9%98%B3%E5%85%89%23&Refer=top) 578051
 30. [2021年最后一条微博](https://s.weibo.com//weibo?q=%232021%E5%B9%B4%E6%9C%80%E5%90%8E%E4%B8%80%E6%9D%A1%E5%BE%AE%E5%8D%9A%23&Refer=top) 552907
 31. [原神](https://s.weibo.com//weibo?q=%E5%8E%9F%E7%A5%9E&Refer=top) 551810
-32. [西安新增本土确诊174例](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%96%B0%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A174%E4%BE%8B%23&Refer=top) 524925
-33. [日出](https://s.weibo.com//weibo?q=%E6%97%A5%E5%87%BA&Refer=top) 524405
-34. [上戏416女团重聚演绎探窗](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%88%8F416%E5%A5%B3%E5%9B%A2%E9%87%8D%E8%81%9A%E6%BC%94%E7%BB%8E%E6%8E%A2%E7%AA%97%23&Refer=top) 496319
-35. [迎接2022](https://s.weibo.com//weibo?q=%E8%BF%8E%E6%8E%A52022&Refer=top) 478123
-36. [女子煤气中毒被自家狗舔脸唤醒](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%85%A4%E6%B0%94%E4%B8%AD%E6%AF%92%E8%A2%AB%E8%87%AA%E5%AE%B6%E7%8B%97%E8%88%94%E8%84%B8%E5%94%A4%E9%86%92%23&Refer=top) 469111
-37. [中纪委评山姆会员店恶意下架新疆产品](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E7%BA%AA%E5%A7%94%E8%AF%84%E5%B1%B1%E5%A7%86%E4%BC%9A%E5%91%98%E5%BA%97%E6%81%B6%E6%84%8F%E4%B8%8B%E6%9E%B6%E6%96%B0%E7%96%86%E4%BA%A7%E5%93%81%23&Refer=top) 463368
-38. [你的2022新年愿望](https://s.weibo.com//weibo?q=%23%E4%BD%A0%E7%9A%842022%E6%96%B0%E5%B9%B4%E6%84%BF%E6%9C%9B%23&Refer=top) 455556
-39. [宁波北仑区发现一例阳性感染者](https://s.weibo.com//weibo?q=%23%E5%AE%81%E6%B3%A2%E5%8C%97%E4%BB%91%E5%8C%BA%E5%8F%91%E7%8E%B0%E4%B8%80%E4%BE%8B%E9%98%B3%E6%80%A7%E6%84%9F%E6%9F%93%E8%80%85%23&Refer=top) 455202
-40. [东方卫视跨年满满正能量](https://s.weibo.com//weibo?q=%23%E4%B8%9C%E6%96%B9%E5%8D%AB%E8%A7%86%E8%B7%A8%E5%B9%B4%E6%BB%A1%E6%BB%A1%E6%AD%A3%E8%83%BD%E9%87%8F%23&Refer=top) 443048
-41. [罗振宇 跨年](https://s.weibo.com//weibo?q=%E7%BD%97%E6%8C%AF%E5%AE%87%20%E8%B7%A8%E5%B9%B4&Refer=top) 422550
-42. [2021的最后一天](https://s.weibo.com//weibo?q=%232021%E7%9A%84%E6%9C%80%E5%90%8E%E4%B8%80%E5%A4%A9%23&Refer=top) 422491
-43. [跨年红包](https://s.weibo.com//weibo?q=%E8%B7%A8%E5%B9%B4%E7%BA%A2%E5%8C%85&Refer=top) 413264
-44. [2022新年贺词完整视频](https://s.weibo.com//weibo?q=%232022%E6%96%B0%E5%B9%B4%E8%B4%BA%E8%AF%8D%E5%AE%8C%E6%95%B4%E8%A7%86%E9%A2%91%23&Refer=top) 407792
-45. [财政部下拨5亿支持陕西防疫](https://s.weibo.com//weibo?q=%23%E8%B4%A2%E6%94%BF%E9%83%A8%E4%B8%8B%E6%8B%A85%E4%BA%BF%E6%94%AF%E6%8C%81%E9%99%95%E8%A5%BF%E9%98%B2%E7%96%AB%23&Refer=top) 396216
-46. [翟志刚只想做个安静的美男子](https://s.weibo.com//weibo?q=%E7%BF%9F%E5%BF%97%E5%88%9A%E5%8F%AA%E6%83%B3%E5%81%9A%E4%B8%AA%E5%AE%89%E9%9D%99%E7%9A%84%E7%BE%8E%E7%94%B7%E5%AD%90&Refer=top) 392465
-47. [中国驻尼加拉瓜大使馆举行复馆仪式](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E9%A9%BB%E5%B0%BC%E5%8A%A0%E6%8B%89%E7%93%9C%E5%A4%A7%E4%BD%BF%E9%A6%86%E4%B8%BE%E8%A1%8C%E5%A4%8D%E9%A6%86%E4%BB%AA%E5%BC%8F%23&Refer=top) 387670
+32. [翟志刚只想做个安静的美男子](https://s.weibo.com//weibo?q=%23%E7%BF%9F%E5%BF%97%E5%88%9A%E5%8F%AA%E6%83%B3%E5%81%9A%E4%B8%AA%E5%AE%89%E9%9D%99%E7%9A%84%E7%BE%8E%E7%94%B7%E5%AD%90%23&Refer=top) 538794
+33. [西安新增本土确诊174例](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%96%B0%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A174%E4%BE%8B%23&Refer=top) 538674
+34. [宁波北仑区发现一例阳性感染者](https://s.weibo.com//weibo?q=%23%E5%AE%81%E6%B3%A2%E5%8C%97%E4%BB%91%E5%8C%BA%E5%8F%91%E7%8E%B0%E4%B8%80%E4%BE%8B%E9%98%B3%E6%80%A7%E6%84%9F%E6%9F%93%E8%80%85%23&Refer=top) 538515
+35. [上戏416女团重聚演绎探窗](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%88%8F416%E5%A5%B3%E5%9B%A2%E9%87%8D%E8%81%9A%E6%BC%94%E7%BB%8E%E6%8E%A2%E7%AA%97%23&Refer=top) 537005
+36. [日出](https://s.weibo.com//weibo?q=%E6%97%A5%E5%87%BA&Refer=top) 524405
+37. [迎接2022](https://s.weibo.com//weibo?q=%E8%BF%8E%E6%8E%A52022&Refer=top) 478123
+38. [女子煤气中毒被自家狗舔脸唤醒](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%85%A4%E6%B0%94%E4%B8%AD%E6%AF%92%E8%A2%AB%E8%87%AA%E5%AE%B6%E7%8B%97%E8%88%94%E8%84%B8%E5%94%A4%E9%86%92%23&Refer=top) 469111
+39. [中纪委评山姆会员店恶意下架新疆产品](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E7%BA%AA%E5%A7%94%E8%AF%84%E5%B1%B1%E5%A7%86%E4%BC%9A%E5%91%98%E5%BA%97%E6%81%B6%E6%84%8F%E4%B8%8B%E6%9E%B6%E6%96%B0%E7%96%86%E4%BA%A7%E5%93%81%23&Refer=top) 463368
+40. [你的2022新年愿望](https://s.weibo.com//weibo?q=%23%E4%BD%A0%E7%9A%842022%E6%96%B0%E5%B9%B4%E6%84%BF%E6%9C%9B%23&Refer=top) 455556
+41. [东方卫视跨年满满正能量](https://s.weibo.com//weibo?q=%23%E4%B8%9C%E6%96%B9%E5%8D%AB%E8%A7%86%E8%B7%A8%E5%B9%B4%E6%BB%A1%E6%BB%A1%E6%AD%A3%E8%83%BD%E9%87%8F%23&Refer=top) 443048
+42. [中国驻尼加拉瓜大使馆举行复馆仪式](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E9%A9%BB%E5%B0%BC%E5%8A%A0%E6%8B%89%E7%93%9C%E5%A4%A7%E4%BD%BF%E9%A6%86%E4%B8%BE%E8%A1%8C%E5%A4%8D%E9%A6%86%E4%BB%AA%E5%BC%8F%23&Refer=top) 423066
+43. [罗振宇 跨年](https://s.weibo.com//weibo?q=%E7%BD%97%E6%8C%AF%E5%AE%87%20%E8%B7%A8%E5%B9%B4&Refer=top) 422550
+44. [2021的最后一天](https://s.weibo.com//weibo?q=%232021%E7%9A%84%E6%9C%80%E5%90%8E%E4%B8%80%E5%A4%A9%23&Refer=top) 422491
+45. [跨年红包](https://s.weibo.com//weibo?q=%E8%B7%A8%E5%B9%B4%E7%BA%A2%E5%8C%85&Refer=top) 413264
+46. [2022新年贺词完整视频](https://s.weibo.com//weibo?q=%232022%E6%96%B0%E5%B9%B4%E8%B4%BA%E8%AF%8D%E5%AE%8C%E6%95%B4%E8%A7%86%E9%A2%91%23&Refer=top) 407792
+47. [财政部下拨5亿支持陕西防疫](https://s.weibo.com//weibo?q=%23%E8%B4%A2%E6%94%BF%E9%83%A8%E4%B8%8B%E6%8B%A85%E4%BA%BF%E6%94%AF%E6%8C%81%E9%99%95%E8%A5%BF%E9%98%B2%E7%96%AB%23&Refer=top) 396216
 48. [2022第一场升国旗仪式](https://s.weibo.com//weibo?q=%232022%E7%AC%AC%E4%B8%80%E5%9C%BA%E5%8D%87%E5%9B%BD%E6%97%97%E4%BB%AA%E5%BC%8F%23&Refer=top) 382048
 49. [2022来啦](https://s.weibo.com//weibo?q=%232022%E6%9D%A5%E5%95%A6%23&Refer=top) 366351
 50. [2022新年愿望](https://s.weibo.com//weibo?q=%232022%E6%96%B0%E5%B9%B4%E6%84%BF%E6%9C%9B%23&Refer=top) 365738
